# job-service-rust

./: .crates.toml  .crates2.json  .env.example  .env.production.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.infra.yml  docker-compose.metrics.yml  docker-compose.yml  magerc.json  sonar-project.properties  tarpaulin.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
infra/metrics/: prometheus.yml
infra/metrics/grafana/provisioning/dashboards/: rust_dashboard.json
scripts/: sonar-scan.sh
src/: config.rs  errors.rs  lib.rs  main.rs
src/core/: cron.rs  crud.rs  errors.rs  job.rs  job_info.rs  job_signal.rs  job_status.rs  mod.rs  query_parser.rs  scheduler.rs
src/infra/: auth.rs  bootstrap.rs  cache.rs  database.rs  email.rs  health.rs  messaging.rs  mod.rs  pdf.rs  redis.rs
src/infra/messaging/: connection.rs  consumer.rs  mod.rs  publisher.rs  tests.rs
src/infra/storage/: local.rs  mod.rs
src/jobs/: health_check_job.rs  mod.rs  register_jobs.rs
src/middleware/: audit.rs  auth.rs  error_log.rs  mod.rs  rate_limit.rs  rbac.rs  request_log.rs
src/migration/: m20260517_000001_create_initial_tables.rs  mod.rs
src/models/: audit.rs  auth.rs  error_log.rs  feature.rs  mod.rs  product.rs  role.rs  role_feature.rs  user.rs
src/modules/: mod.rs  observability.rs
src/modules/audit/: controller.rs  mod.rs  routes.rs  schemas.rs  service.rs
src/modules/audit_explorer/: controller.rs  mod.rs  routes.rs  view.rs
src/modules/auth/: controller.rs  mod.rs  routes.rs  schemas.rs  service.rs
src/modules/dashboard/: controller.rs  mod.rs  routes.rs  schemas.rs  service.rs
src/modules/product/: controller.rs  mod.rs  routes.rs  schemas.rs  service.rs
src/modules/role/: controller.rs  mod.rs  routes.rs  schemas.rs  service.rs
src/modules/upload/: controller.rs  mod.rs  routes.rs
src/modules/user/: controller.rs  mod.rs  routes.rs  schemas.rs  service.rs
src/shared/: config.rs  logger.rs
templates/crud/: controller.rs.tpl  migration.rs.tpl  mod.rs.tpl  model.rs.tpl  routes.rs.tpl  schemas.rs.tpl  service.rs.tpl  test.rs.tpl
templates/storage/: azure.rs.tpl  gcs.rs.tpl  s3.rs.tpl
tests/: integration_tests.rs
tests/common/: mod.rs
tests/compliance/: mod.rs  t01_auth_session.rs  t02_rbac.rs  t03_crud_schema.rs  t04_dynamic_filters.rs  t05_audit_logs.rs  t06_soft_delete.rs  t07_observability.rs  t08_rate_limit.rs  t09_status.rs  t10_role_features.rs  t11_session_invalidation.rs  t12_error_logs.rs  t13_pdf_debug.rs  t14_audit_explorer.rs  t15_bootstrap.rs  t16_dashboard.rs  t17_upload.rs  t18_crud_errors.rs
