[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"
default-run = "backend-rust"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros", "multipart"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "limit", "fs"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json"] }
sea-orm-migration = { version = "0.12.15" }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14.0"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
prometheus = { version = "0.13.3", features = ["process"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.37", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lettre = { version = "0.11.7", features = ["tokio1", "tokio1-native-tls", "file-transport"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
once_cell = "1.19.0"
validator = { version = "0.18.1", features = ["derive"] }
async-trait = "0.1.79"
lapin = "2.3.1"
futures-util = "0.3.30"
dialoguer = "0.12.0"
reqwest = { version = "0.12.5", features = ["json"] }


[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
testcontainers = { version = "0.27.0" }
testcontainers-modules = { version = "0.15.0", features = ["postgres", "redis", "rabbitmq"] }
