[package]
name = "job-service-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
default-run = "job-service-rust"
description = "Job runner boilerplate (cron + PostgreSQL + Redis + RabbitMQ)"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "sqlite"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14.0"
lapin = "2.3.1"
cron = "0.12.1"
chrono = { version = "0.4.37", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
async-trait = "0.1.79"

[dev-dependencies]
tracing-test = "0.2.5"
serial_test = "3.1.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
